@@ -8,9 +8,7 @@ import co.elastic.clients.elasticsearch.core.search.Hit;
 import co.elastic.clients.elasticsearch.core.search.TotalHits;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.searchbox.core.Search;
-import io.searchbox.core.SearchResult;
 import lombok.extern.slf4j.Slf4j;
-import org.jooq.lambda.Unchecked;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
@@ -70,11 +68,11 @@ public class ElasticsearchCaseSearchOperation implements CaseSearchOperation {
 
     private MsearchResponse<ElasticSearchCaseDetailsDTO> search(CrossCaseTypeSearchRequest request) {
         MsearchRequest msearchRequest = secureAndTransformSearchRequest(request);
-        log.info("MsearchRequest: {}", msearchRequest);
+        log.debug("MsearchRequest: {}", msearchRequest);
         try {
             MsearchResponse<ElasticSearchCaseDetailsDTO> response = elasticsearchClient.msearch(msearchRequest,
                 ElasticSearchCaseDetailsDTO.class);
-            log.info("MsearchResponse: {}", response);
+            log.debug("MsearchResponse: {}", response);
             return response;
         } catch (Exception e) {
             throw new ServiceException("Exception executing Elasticsearch search: " + e.getMessage(), e);
@@ -136,10 +134,11 @@ public class ElasticsearchCaseSearchOperation implements CaseSearchOperation {
                 log.warn("No hits found for index: {}", "");
                 continue;
             }
+            assert result.hits().total() != null;
             total += result.hits().total().value();
             List<Hit<ElasticSearchCaseDetailsDTO>> hits = result.hits().hits();
             if (!hits.isEmpty()) {
-                String indexName = hits.get(0).index();
+                String indexName = hits.getFirst().index();
                 String caseTypeId = request.getSearchIndex().isEmpty()
                     ? getCaseTypeIDFromIndex(indexName, request.getCaseTypeIds())
                     : null;
@@ -184,20 +183,6 @@ public class ElasticsearchCaseSearchOperation implements CaseSearchOperation {
             throw new ServiceException("Cannot determine case type id from ES index name - cannot extract"
                 + " case type id");
         }
-    }
-
-    private List<CaseDetails> searchResultToCaseList(SearchResult searchResult) {
-        List<String> casesAsString = searchResult.getSourceAsStringList();
-        List<ElasticSearchCaseDetailsDTO> dtos = toElasticSearchCasesDTO(casesAsString);
-        return caseDetailsMapper.dtosToCaseDetailsList(dtos);
-    }
-
-    private List<ElasticSearchCaseDetailsDTO> toElasticSearchCasesDTO(List<String> cases) {
-        return cases
-            .stream()
-            .map(Unchecked.function(caseDetail
-                -> objectMapper.readValue(caseDetail, ElasticSearchCaseDetailsDTO.class)))
-            .collect(toList());
     }
 
     private String getCaseIndexName(String caseTypeId) {
