@@ -11,12 +11,14 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
+import uk.gov.hmcts.ccd.ApplicationParams;
 import uk.gov.hmcts.ccd.domain.model.definition.CaseDetails;
 import uk.gov.hmcts.ccd.domain.model.search.CaseSearchResult;
 import uk.gov.hmcts.ccd.domain.model.search.elasticsearch.ElasticsearchRequest;
 import uk.gov.hmcts.ccd.domain.service.search.elasticsearch.CaseSearchOperation;
 import uk.gov.hmcts.ccd.domain.service.search.elasticsearch.CrossCaseTypeSearchRequest;
 import uk.gov.hmcts.ccd.domain.service.search.elasticsearch.ElasticsearchQueryHelper;
+import uk.gov.hmcts.ccd.domain.service.search.elasticsearch.SearchIndex;
 import uk.gov.hmcts.ccd.endpoint.exceptions.BadRequestException;
 
 import java.util.List;
@@ -46,6 +48,9 @@ class CaseSearchEndpointTest {
     @Mock
     private ElasticsearchQueryHelper elasticsearchQueryHelper;
 
+    @Mock
+    private ApplicationParams applicationParams;
+
     @InjectMocks
     private CaseSearchEndpoint endpoint;
 
@@ -59,6 +64,9 @@ class CaseSearchEndpointTest {
         assertThrows(BadRequestException.class, () ->
             endpoint.searchCases(null, null, true)
         );
+        assertThrows(BadRequestException.class, () ->
+            endpoint.searchCases(null, null, true, true)
+        );
     }
 
     @Test
@@ -66,6 +74,9 @@ class CaseSearchEndpointTest {
         List<String> emptyList = List.of();
         assertThrows(BadRequestException.class, () ->
             endpoint.searchCases(emptyList, null, true)
+        );
+        assertThrows(BadRequestException.class, () ->
+            endpoint.searchCases(emptyList, null, true, true)
         );
     }
 
@@ -89,7 +100,35 @@ class CaseSearchEndpointTest {
         verify(caseSearchOperation).execute(argThat(crossCaseTypeSearchRequest -> {
             assertThat(crossCaseTypeSearchRequest.getSearchRequestJsonNode(), is(searchRequestNode));
             assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().size(), is(1));
-            assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().get(0), is(CASE_TYPE_ID));
+            assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().getFirst(), is(CASE_TYPE_ID));
+            assertThat(crossCaseTypeSearchRequest.isMultiCaseTypeSearch(), is(false));
+            assertThat(crossCaseTypeSearchRequest.getAliasFields().size(), is(0));
+            return true;
+        }), anyBoolean());
+        assertThat(caseSearchResult, is(result));
+    }
+
+    @Test
+    void searchCaseDetailsGlobalInvokesOperation() throws JsonProcessingException {
+
+        // ARRANGE
+        CaseSearchResult result = mock(CaseSearchResult.class);
+        when(caseSearchOperation.execute(any(CrossCaseTypeSearchRequest.class), anyBoolean())).thenReturn(result);
+        String searchRequest = "{\"query\": {\"match\": \"blah blah\"}}";
+        JsonNode searchRequestNode = new ObjectMapper().readTree(searchRequest);
+        ElasticsearchRequest elasticSearchRequest = new ElasticsearchRequest(searchRequestNode);
+        when(elasticsearchQueryHelper.validateAndConvertRequest(any())).thenReturn(elasticSearchRequest);
+        List<String> caseTypeIds = singletonList(CASE_TYPE_ID);
+
+        // ACT
+        final CaseSearchResult caseSearchResult = endpoint.searchCases(caseTypeIds, searchRequest, true, true);
+
+        // ASSERT
+        verify(elasticsearchQueryHelper).validateAndConvertRequest(searchRequest);
+        verify(caseSearchOperation).execute(argThat(crossCaseTypeSearchRequest -> {
+            assertThat(crossCaseTypeSearchRequest.getSearchRequestJsonNode(), is(searchRequestNode));
+            assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().size(), is(1));
+            assertThat(crossCaseTypeSearchRequest.getCaseTypeIds().getFirst(), is(CASE_TYPE_ID));
             assertThat(crossCaseTypeSearchRequest.isMultiCaseTypeSearch(), is(false));
             assertThat(crossCaseTypeSearchRequest.getAliasFields().size(), is(0));
             return true;
@@ -111,7 +150,8 @@ class CaseSearchEndpointTest {
         when(elasticsearchQueryHelper.getCaseTypesAvailableToUser()).thenReturn(List.of(CASE_TYPE_ID, CASE_TYPE_ID_2));
 
         // ACT
-        final CaseSearchResult caseSearchResult = endpoint.searchCases(caseTypeIds, searchRequest, true);
+        final CaseSearchResult caseSearchResult = endpoint.searchCases(caseTypeIds, searchRequest, true,
+            false);
 
         // ASSERT
         verify(elasticsearchQueryHelper).validateAndConvertRequest(searchRequest);
@@ -125,6 +165,80 @@ class CaseSearchEndpointTest {
         }), anyBoolean());
         assertThat(caseSearchResult, is(result));
     }
+
+    @Test
+    void searchCases_usesGlobalIndexWhenGlobalTrue() throws Exception {
+        // ARRANGE
+        when(applicationParams.getGlobalSearchIndexName()).thenReturn("global_index");
+        when(applicationParams.getGlobalSearchIndexType()).thenReturn("_doc");
+
+        String searchRequest = "{\"query\": {\"match\": {\"reference\": {\"query\": \"123\"}}}}";
+        JsonNode searchRequestNode = new ObjectMapper().readTree(searchRequest);
+        ElasticsearchRequest elasticSearchRequest = new ElasticsearchRequest(searchRequestNode);
+
+        when(elasticsearchQueryHelper.validateAndConvertRequest(any())).thenReturn(elasticSearchRequest);
+
+        CaseSearchResult expected = mock(CaseSearchResult.class);
+        when(caseSearchOperation.execute(any(CrossCaseTypeSearchRequest.class), anyBoolean())).thenReturn(expected);
+
+        List<String> caseTypeIds = singletonList(CASE_TYPE_ID);
+
+        // ACT
+        CaseSearchResult actual = endpoint.searchCases(caseTypeIds, searchRequest, true, true);
+
+        // ASSERT
+        verify(elasticsearchQueryHelper).validateAndConvertRequest(searchRequest);
+        verify(caseSearchOperation).execute(argThat(req -> {
+            assertThat(req.getSearchRequestJsonNode(), is(searchRequestNode));
+            // uses provided case type list
+            assertThat(req.getCaseTypeIds(), is(List.of(CASE_TYPE_ID)));
+            // points to global index
+            SearchIndex idx = req.getSearchIndex().get();
+            assertThat(idx.getIndexName(), is("global_index"));
+            assertThat(idx.getIndexType(), is("_doc"));
+            return true;
+        }), anyBoolean());
+        assertThat(actual, is(expected));
+    }
+
+    @Test
+    void searchCases_globalTrueAndWildcardExpandsCaseTypes() throws Exception {
+        // ARRANGE
+        when(applicationParams.getGlobalSearchIndexName()).thenReturn("global_index");
+        when(applicationParams.getGlobalSearchIndexType()).thenReturn("_doc");
+
+        String searchRequest = "{\"query\": {\"match_all\": {}}}";
+        JsonNode searchRequestNode = new ObjectMapper().readTree(searchRequest);
+        ElasticsearchRequest elasticSearchRequest = new ElasticsearchRequest(searchRequestNode);
+        when(elasticsearchQueryHelper.validateAndConvertRequest(any())).thenReturn(elasticSearchRequest);
+
+        // When wildcard passed, helper should expand to available case types
+        when(elasticsearchQueryHelper.getCaseTypesAvailableToUser())
+            .thenReturn(List.of(CASE_TYPE_ID, CASE_TYPE_ID_2));
+
+        CaseSearchResult expected = mock(CaseSearchResult.class);
+        when(caseSearchOperation.execute(any(CrossCaseTypeSearchRequest.class), anyBoolean())).thenReturn(expected);
+
+        List<String> wildcard = singletonList(ElasticsearchRequest.WILDCARD);
+
+        // ACT
+        CaseSearchResult actual = endpoint.searchCases(wildcard, searchRequest, true, true);
+
+        // ASSERT
+        verify(elasticsearchQueryHelper).validateAndConvertRequest(searchRequest);
+        verify(caseSearchOperation).execute(argThat(req -> {
+            assertThat(req.getSearchRequestJsonNode(), is(searchRequestNode));
+            // ✅ wildcard was expanded
+            assertThat(req.getCaseTypeIds(), is(List.of(CASE_TYPE_ID, CASE_TYPE_ID_2)));
+            // ✅ global index is selected
+            SearchIndex idx = req.getSearchIndex().get();
+            assertThat(idx.getIndexName(), is("global_index"));
+            assertThat(idx.getIndexType(), is("_doc"));
+            return true;
+        }), anyBoolean());
+        assertThat(actual, is(expected));
+    }
+
 
 
     @Nested
